@@ -3061,8 +3061,16 @@ RewriteRule .* - [E=REMOTE_USER:%{HTTP:Authorization},L]
     Suhosin configuration might lead to malfunction in some cases and it can
     not be fully avoided as phpMyAdmin is kind of application which needs to
     transfer big amounts of fields in single HTTP request, what is something
-    what Suhosin tries to prevent. If you have problems, please adjust at
-    least following parameters:
+    what Suhosin tries to prevent. Generally all
+    <code>suhosin.request.*</code>, <code>suhosin.post.*</code> and
+    <code>suhosin.get.*</code> directives can have negative effect on
+    phpMyAdmin usability. You can always find in your error logs which limit
+    did cause dropping of variable, so you can diagnose the problem and adjust
+    matching configuration variable.
+</p>
+<p>
+    The default values for most Suhosin configuration options will work in most 
+    scenarios, however you might want to adjust at least following parameters:
 </p>
 
 <ul>
