@@ -24,6 +24,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #2980582 [interface] Properly format server status parameter.
 - bug #2973949 [session] SQL History broken (revert patch #2899969),
   thanks to Dieter Adriaenssens - ruleant
+- [doc] Be more specific about problems with Suhosin.
 
 3.3.1.0 (2010-03-16)
 - bug #2941037 [core] Database structure not sorted by table correctly 
